# fluidsynth-android-opensles

app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/fluidsynth/android/: CMakeLists.txt
app/src/main/cpp/fluidsynth/src/drivers/: fluid_adriver.c  fluid_oboedriver.cpp  fluid_oboedriver.h  fluid_opensles.c  fluid_settings_constants.h
app/src/main/cpp/fluidsynth/src/drivers/oboe/: OboeAudioSettings.cpp  OboeAudioSettings.h  OboeDriver.cpp  OboeDriver.h  OboeDriverWrapper.cpp  OboeDriverWrapper.h  OboeSynthesizer.cpp  OboeSynthesizer.h  fluid_oboe.cpp  fluid_oboe.h  fluid_oboe_driver.cpp  fluid_oboe_driver.h  fluid_oboe_synthesizer.cpp  fluid_oboe_synthesizer.h  fluid_oboe_wrapper.cpp  fluid_oboe_wrapper.h
app/src/main/java/opensles/android/fluidsynth/fluidsynth_android_opensles/: NativeLibJNI.kt
